--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <body>
     <header class="page-header">
       <div class="container">
-        Контакты в шапке
+        <a class="header-email" href="mailto:tr.mikhail28@gmail.com">tr.mikhail28@gmail.com</a>
+        <a class="header-phone" href="tel:+79614185188">+7 (961) 418-51-88</a>
       </div>
     </header>
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Опознанный Енот</h1>
+        <h1 class="heading">Трифонов Михаил</h1>
         <p>Junior верстальщик</p>
       </div>
     </section>
@@ -24,6 +25,12 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="files/user1.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+          <figcaption>
+            Это я
+          </figcaption>
+        </figure>
         <h3>Пара слов о себе</h3>
         <p>Текст с парой слов о себе.</p>
         <h3>Чем могу быть полезен</h3>
@@ -34,6 +41,9 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
+        <figure class="project-image">
+          <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+        </figure>
 
         <h3>Магазин товаров для дома</h3>
         <p>Мой первый сайт.</p>
@@ -45,7 +55,8 @@
 
     <footer class="page-footer">
       <div class="container">
-        Контакты в подвале
+        <a class="footer-email" href="mailto:tr.mikhail28@gmail.com">tr.mikhail28@gmail.com</a>
+        <a class="footer-phone" href="tel:+79614185188">+7 (961) 418-51-88</a>
       </div>
     </footer>
   </body>
