добавляет темную тему и шкалу скиллов

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         <h3>Чем могу быть полезен</h3>
         <p>Текст о том, чем могу быть полезен.</p>
       </div>
+      <div class="skills">
+        <h3>Мои навыки</h3>
+        <dl class="skills-list">
+          <dt class="skill-html">HTML</dt>
+          <dd class="level"><div style="width: 60%;">60%</div></dd>
+          <dt class="skill-css">CSS</dt>
+          <dd class="level"><div style="width: 40%">40%</div><dd>
+        </dl>
+      </div>
     </section>
 
     <section class="portfolio">
