новая версия, новая темная тема, добавлены скиллы

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
         <figure class="user-image">
-          <img src="files/user1.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+          <img src="files/user.jpg" width="600" height="600" alt="Моя фотография">
           <figcaption>
             Это я
           </figcaption>
         </figure>
         <h3>Пара слов о себе</h3>
-        <p>Текст с парой слов о себе.</p>
+        <p>Я учусь в 10 классе по направлению <q>Инженерно-технологическое</q>. Уже несколько лет усиленно изучаю программирование на языках Python и C++. И вот пару месяцев назад я <q>окунулся с головой</q> в мир разметки. Сейчас развиваю и закрепляю свои навыки владения HTML и CSS на практике. Ниже изображен мой процесс в освоении всех перечисленных языков программирования и разметки, так что со временем я буду их дополнять</p>
         <h3>Чем могу быть полезен</h3>
         <p>Текст о том, чем могу быть полезен.</p>
       </div>
@@ -42,7 +42,11 @@
           <dt class="skill-html">HTML</dt>
           <dd class="level"><div style="width: 60%;">60%</div></dd>
           <dt class="skill-css">CSS</dt>
-          <dd class="level"><div style="width: 40%">40%</div><dd>
+          <dd class="level"><div style="width: 40%;">40%</div></dd>
+          <dt class="skill-python">Python</dt>
+          <dd class="level"><div style="width: 80%;">80%</div></dd>
+          <dt class="skill-cpp">C++</dt>
+          <dd class="level"><div style="width: 15%;">15%</div></dd>
         </dl>
       </div>
     </section>
@@ -50,15 +54,20 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
+        <h3>Магазин товаров для дома</h3>
         <figure class="project-image">
           <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+          <figcaption>
+            <p class="caption">Мой первый сайт.</p>
+          </figcaption>
         </figure>
 
-        <h3>Магазин товаров для дома</h3>
-        <p>Мой первый сайт.</p>
-
         <h3>Блог начинающего верстальщика</h3>
-        <p>Статический блог про обучение HTML и CSS.</p>
+        <figure class="project-image">
+          <img src="files/project1.jpg" width="1800" height="897" alt="Cайт-блог про обучение HTML и CSS">
+          <figcaption>
+            <p class="caption">Статический блог про обучение HTML и CSS.</p>
+        </figure>
       </div>
     </section>
 
