адаптация под экраны и подсветка фото

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="портфолио Михаил Трифонов верстальщик junior css html">
+    <meta name="description" content="Портфолио Junior верстальщика Трифонова Михаила.">
     <link rel="stylesheet" href="style.css">
     <title>Портфолио Junior верстальщика</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
@@ -19,6 +22,7 @@
       <div class="container">
         <h1 class="heading">Трифонов Михаил</h1>
         <p>Junior верстальщик</p>
+<!--         <span class="button" style="width: 100px;">Кнопочка</span> -->
       </div>
     </section>
 
@@ -32,7 +36,7 @@
           </figcaption>
         </figure>
         <h3>Пара слов о себе</h3>
-        <p>Я учусь в 10 классе по направлению <q>Инженерно-технологическое</q>. Уже несколько лет усиленно изучаю программирование на языках Python и C++. И вот пару месяцев назад я <q>окунулся с головой</q> в мир разметки. Сейчас развиваю и закрепляю свои навыки владения HTML и CSS на практике. Ниже изображен мой процесс в освоении всех перечисленных языков программирования и разметки, так что со временем я буду их дополнять</p>
+        <p>Я учусь в 10 классе по направлению <q>Инженерно-технологическое</q>. Уже несколько лет усиленно изучаю программирование на языках Python и C++. И вот пару месяцев назад я <q>окунулся с головой</q> в мир разметки. Сейчас развиваю и закрепляю свои навыки владения HTML и CSS на практике. Ниже изображен мой процесс в освоении всех перечисленных языков программирования и разметки, так что со временем я буду их дополнять.</p>
         <h3>Чем могу быть полезен</h3>
         <p>Текст о том, чем могу быть полезен.</p>
       </div>
@@ -66,7 +70,7 @@
         <figure class="project-image">
           <img src="files/project1.jpg" width="1800" height="897" alt="Cайт-блог про обучение HTML и CSS">
           <figcaption>
-            <p class="caption">Статический блог про обучение HTML и CSS.</p>
+            <p class="caption">Статичный блог про обучение HTML и CSS.</p>
         </figure>
       </div>
     </section>
@@ -77,5 +81,7 @@
         <a class="footer-phone" href="tel:+79614185188">+7 (961) 418-51-88</a>
       </div>
     </footer>
+
+<!--     <script src="js_part.js"></script> -->
   </body>
 </html>
