--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Трифонов Михаил</h1>
+        <h1 class="heading">Трифонов Михаилл</h1>
         <p>Junior верстальщик</p>
 <!--         <span class="button" style="width: 100px;">Кнопочка</span> -->
       </div>
