--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="портфолио Михаил Трифонов верстальщик junior css html">
     <meta name="description" content="Портфолио Junior верстальщика Трифонова Михаила.">
     <link rel="stylesheet" href="style.css">
@@ -20,7 +19,7 @@
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Трифонов Михаилл</h1>
+        <h1 class="heading">Трифонов Михаил</h1>
         <p>Junior верстальщик</p>
 <!--         <span class="button" style="width: 100px;">Кнопочка</span> -->
       </div>
